@@ -1,3 +1,9 @@
+unreleased
+
+* Enhancements
+
+  * Make document an optional argument
+
 0.3.3 / 2012-06-26
 
 * Bug fixes
